deps/chakrashim/core/test/strict/delete.baseline
SyntaxError: Calling delete on expression not allowed in strict mode
	at code (delete.js:9:15)
